fixed card sizing on mobile devices

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,9 +15,9 @@ body {
 
   background-color: white;
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   justify-content: center;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   scroll-snap-align: center;
 
   img {
@@ -42,12 +42,13 @@ body {
   margin-bottom: 5px;
   scroll-snap-align: center;
 
-  img {
-    top: 50%;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    height: 40%;
-  }
+}
+
+.Card-image {
+  top: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  height: 40%;
 }
 
 .FormContainer {
@@ -84,6 +85,7 @@ body {
   // z-index: 9;
   overflow-y: hidden;
 }
+
 .GetCardsContainer .h2 {
   text-align: center;
   background: white;
@@ -126,6 +128,7 @@ code {
   top: 56px;
   text-align: center;
 }
+
 #root {
   box-sizing: border-box;
   width: 100%;
@@ -143,6 +146,7 @@ code {
   position: relative;
   margin-top: 4rem;
 }
+
 .userCardList h2:hover,
 .userCardList h2:active {
   color: #fa923f;
